kubernetes/docwhat/vacation-calendar-auth.yaml
###############################################
# BasicAuth Middleware
###############################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: vacation-calendar-auth
  namespace: docwhat
spec:
  basicAuth:
    secret: vacation-calendar-secret
