kubernetes/docwhat/blog-staging.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-staging
  namespace: docwhat
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.blog: "glob:sha-*"
spec:
  selector:
    matchLabels:
      app: blog
      environment: staging
  template:
    metadata:
      labels:
        environment: staging
        app: blog
    spec:
      containers:
      - name: blog
        image: ghcr.io/docwhat/blog:sha-a76b4109
        resources:
          requests:
            cpu: 2m
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /nginx-health
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: cache-volume
        - mountPath: /run
          name: run-volume
        securityContext:
          readOnlyRootFilesystem: true
      imagePullSecrets:
      - name: github-docker-secret
      volumes:
      - name: cache-volume
        emptyDir: {}
      - name: run-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: blog-staging
  namespace: docwhat
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: blog
    environment: staging
