kubernetes/docwhat/go-import.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-import
  namespace: docwhat
  annotations:
    fluxcd.io/automated: "true"
spec:
  selector:
    matchLabels:
      app: go-import
      environment: production
  template:
    metadata:
      labels:
        app: go-import
        environment: production
    spec:
      containers:
        - name: go-import
          image: docker.io/docwhat/go-importd:1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "3m"
              memory: "6Mi"
            limits:
              memory: "12Mi"
          ports:
            - containerPort: 80
          readinessProbe:
            periodSeconds: 60
            timeoutSeconds: 2
            httpGet:
              path: "/go-importd?go-get=1"
              port: 80
          securityContext:
            readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: go-import
  namespace: docwhat
  labels:
    app: go-import
    environment: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: go-import
    environment: production
