kubernetes/docwhat/street-cleaning.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: street-cleaning
  namespace: docwhat
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.street-cleaning: "glob:sha-*"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: street-cleaning
      environment: production
  template:
    metadata:
      labels:
        app: street-cleaning
        environment: production
    spec:
      containers:
      - name: street-cleaning
        image: docker.pkg.github.com/docwhat/street_cleaning/street-cleaning-calendar:sha-5729fbf
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "2m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /nginx-health
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: cache-volume
        - mountPath: /run
          name: run-volume
        securityContext:
          readOnlyRootFilesystem: true
      imagePullSecrets:
      - name: github-docker-secret
      volumes:
      - name: cache-volume
        emptyDir: {}
      - name: run-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: street-cleaning
  namespace: docwhat
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: street-cleaning
    environment: production
