kubernetes/docwhat/vacation-calendar.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vacation-calendar
  namespace: docwhat
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.vacation-calendar: "glob:sha-*"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vacation-calendar
      environment: production
  template:
    metadata:
      labels:
        app: vacation-calendar
        environment: production
    spec:
      containers:
      - name: vacation-calendar
        image: docker.pkg.github.com/docwhat/vacation-calendar/web:sha-2bf27bd
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.5m"
            memory: "8Mi"
          limits:
            memory: "32Mi"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /nginx-health
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: cache-volume
        - mountPath: /run
          name: run-volume
        securityContext:
          readOnlyRootFilesystem: true
      imagePullSecrets:
      - name: github-docker-secret
      volumes:
      - name: cache-volume
        emptyDir: {}
      - name: run-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: vacation-calendar
  namespace: docwhat
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vacation-calendar
    environment: production
