kubernetes/docwhat/staging-routes.yaml
# The route is manually created because it has a secret URL.
# See https://github.com/containous/traefik/issues/7127

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: staging-routes
  namespace: docwhat

spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: "Host(`docwhat.net`) || Host(`www.docwhat.net`)"
      kind: Rule
      services:
        - name: blog-staging
          port: 80
      middlewares:
        - name: https-redirect
          namespace: traefik
        - name: sts-headers
          namespace: traefik

    - match: "Host(`docwhat.net`) && Method(`GET`, `HEAD`) && Query(`go-get=1`)"
      kind: Rule
      services:
        - name: go-import
          port: 80
      middlewares:
        - name: https-redirect
          namespace: traefik
        - name: sts-headers
          namespace: traefik

    - match: "Host(`docwhat.net`) && Path(`/street-cleaning{?:.ics|}`)"
      kind: Rule
      services:
        - name: street-cleaning
          port: 80
      middlewares:
        - name: https-redirect
          namespace: traefik
        - name: sts-headers
          namespace: traefik
        - name: replace-path-with-root
          namespace: traefik
